--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -28,11 +28,9 @@ if(APPLE)
     if(IOS)
         set(PLIST_FILE
             "${CMAKE_CURRENT_LIST_DIR}/iOS/Info.plist")
-        set(STORYBOARD
-            "${CMAKE_CURRENT_LIST_DIR}/iOS/Base.lproj/Main.storyboard"
-            "${CMAKE_CURRENT_LIST_DIR}/iOS/Base.lproj/LaunchScreen.storyboard")
-        set(RESOURCE_FILES ${STORYBOARD} ${SCRIPTS})
-        set(ADDITIONAL_LIBRARIES PRIVATE z NativeXr)
+        set(STORYBOARD)
+        set(RESOURCE_FILES ${SCRIPTS})
+        set(ADDITIONAL_LIBRARIES PRIVATE z)
         set(SOURCES ${SOURCES}
             "iOS/AppDelegate.swift"
             "iOS/ViewController.swift"
@@ -138,6 +136,7 @@ target_link_libraries(Playground
     PRIVATE Blob
     PRIVATE Console
     PRIVATE GraphicsDevice
+    PRIVATE NativeInput
     PRIVATE NativeWebGPU
     PRIVATE ScriptLoader
     PRIVATE URL
@@ -146,6 +145,11 @@ target_link_libraries(Playground
     ${PLAYGROUND_PLATFORM_LIBRARIES}
     ${ADDITIONAL_LIBRARIES}
     ${BABYLON_NATIVE_PLAYGROUND_EXTENSION_LIBRARIES})
+
+if(TARGET Canvas)
+    target_link_libraries(Playground PRIVATE Canvas)
+    target_compile_definitions(Playground PRIVATE BABYLON_NATIVE_PLAYGROUND_HAS_CANVAS=1)
+endif()
 
 # See https://gitlab.kitware.com/cmake/cmake/-/issues/23543
 # If we can set minimum required to 3.26+, then we can use the `copy -t` syntax instead.
@@ -175,6 +179,12 @@ endif()
 
 if(APPLE)
     if(IOS)
+        if(PLATFORM MATCHES "SIMULATOR")
+            set(PLAYGROUND_IOS_SDKROOT "iphonesimulator")
+        else()
+            set(PLAYGROUND_IOS_SDKROOT "iphoneos")
+        endif()
+
         set_target_properties(Playground PROPERTIES
             MACOSX_BUNDLE true
             MACOSX_BUNDLE_INFO_PLIST "${PLIST_FILE}"
@@ -188,6 +198,9 @@ if(APPLE)
             XCODE_ATTRIBUTE_SWIFT_OBJC_BRIDGING_HEADER "${CMAKE_CURRENT_LIST_DIR}/iOS/LibNativeBridge.h"
             XCODE_ATTRIBUTE_LD_RUNPATH_SEARCH_PATHS "@executable_path/Frameworks"
             XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "$(inherited) $(SDKROOT)$(SYSTEM_LIBRARY_DIR)/Frameworks"
+            XCODE_ATTRIBUTE_LIBRARY_SEARCH_PATHS "$(inherited) $(SDKROOT)/usr/lib $(SDKROOT)/usr/lib/swift"
+            XCODE_ATTRIBUTE_SUPPORTED_PLATFORMS "iphoneos iphonesimulator"
+            XCODE_ATTRIBUTE_SDKROOT "${PLAYGROUND_IOS_SDKROOT}"
             XCODE_ATTRIBUTE_ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES YES
 
             # CMake seems to add a custom flag "-Wno-unknown-pragmas" to the Swift compiler. That flag is used for Clang,
