--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(BABYLON_NATIVE_PLUGIN_NATIVEINPUT)
+    add_subdirectory(NativeInput)
+endif()
+
 if(BABYLON_NATIVE_PLUGIN_NATIVEWEBGPU)
     add_subdirectory(NativeWebGPU)
 endif()
