--- a/Polyfills/CMakeLists.txt
+++ b/Polyfills/CMakeLists.txt
@@ -3,5 +3,9 @@ if(BABYLON_NATIVE_POLYFILL_WINDOW)
 endif()
 
 if(BABYLON_NATIVE_POLYFILL_CANVAS)
-    add_subdirectory(Canvas)
+    if(BABYLON_NATIVE_POLYFILL_CANVAS_WGPU)
+        add_subdirectory(CanvasWgpu)
+    else()
+        add_subdirectory(Canvas)
+    endif()
 endif()
