--- a/Core/GraphicsWgpu/Rust/Cargo.toml
+++ b/Core/GraphicsWgpu/Rust/Cargo.toml
@@ -9,10 +9,10 @@ crate-type = ["staticlib"]
 
 [features]
 default = []
-upstream_wgpu_native = ["dep:babylon_wgpu_native_shim"]
+upstream_wgpu_native = ["babylon_wgpu_native_shim/upstream_wgpu_native"]
 
 [dependencies]
-babylon_wgpu_native_shim = { path = "upstream-shim", optional = true }
+babylon_wgpu_native_shim = { path = "upstream-shim" }
 pollster = { workspace = true }
 raw-window-handle = { workspace = true }
 wgpu = { workspace = true }
