--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -48,6 +48,25 @@ jobs:
         displayName: "Build UnitTests macOS"
 
       - script: |
+          cd buildmacOS/Apps/Playground/RelWithDebInfo
+          ./Playground app:///Scripts/validation_native.js
+        displayName: "Validation Tests"
+
+      - task: PublishBuildArtifacts@1
+        inputs:
+          artifactName: "macOS - Rendered Pictures"
+          pathtoPublish: "buildmacOS/Apps/Playground/Results"
+        displayName: "Publish Tests macOS Results"
+        condition: always()
+
+      - task: PublishBuildArtifacts@1
+        inputs:
+          artifactName: "macOS - Error Pictures"
+          pathtoPublish: "buildmacOS/Apps/Playground/Errors"
+        displayName: "Publish Tests macOS Errors"
+        condition: failed()
+
+      - script: |
           cd buildmacOS/Apps/UnitTests/RelWithDebInfo
           ./UnitTests
         displayName: "Run UnitTests macOS"
