--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -84,8 +84,7 @@ jobs:
         displayName: "Disable JIT Debugger for Script"
 
       - script: |
-          cd build${{variables.solutionName}}\Apps\Playground
-          cd RelWithDebInfo
+          cd build${{variables.solutionName}}\Apps\Playground\RelWithDebInfo
           Playground app:///Scripts/validation_native.js
         displayName: "Validation Tests"
 
