--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -5,16 +5,21 @@
             "title": "Gaussian Splatting Update Data",
             "playgroundId": "#Q0LBM8#2",
             "renderCount": 15,
-            "excludedGraphicsApis": [ "OpenGL" ],
+            "excludedGraphicsApis": [ "OpenGL", "Metal" ],
             "referenceImage": "gsplat-update-data.png",
-            "comment": "Test doesn't render correctly with OpenGL"
+            "comments": {
+                "OpenGL": "Test doesn't render correctly",
+                "Metal": "Crashes"
+            }
         },
         {
             "title": "Native Canvas",
             "playgroundId": "#TKVFSA#7",
             "referenceImage": "native-canvas.png",
             "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "2D Path not rendered with D3D12"
+            "comments": {
+                "D3D12": "2D Path not rendered"
+            }
         },
         {
             "title": "EXR Loader",
@@ -26,7 +31,9 @@
             "playgroundId": "#M3QR7E#83",
             "excludedGraphicsApis": [ "OpenGL" ],
             "referenceImage": "nmeshadowmap.png",
-            "comment": "xvfb : invalid enum with glRenderbufferStorage"
+            "comments": {
+                "OpenGL": "xvfb : invalid enum with glRenderbufferStorage"
+            }
         },
         {
             "title": "Procedural texture with NME",
@@ -41,7 +48,9 @@
             "errorRatio": 6,
             "excludedGraphicsApis": [ "OpenGL" ],
             "referenceImage": "gltfExtensionExtMeshGpuInstancingTest.png",
-            "comment": "Test works with OpenGL but it so slow that CI times out"
+            "comments": {
+                "OpenGL": "Test works with OpenGL but it so slow that CI times out"
+            }
         },
         {
             "title": "GLTF ext MSFT_LOD",
@@ -54,16 +63,21 @@
             "referenceImage": "gltfTextureLinearInterpolation.png",
             "renderCount": 10,
             "excludedGraphicsApis": [ "OpenGL" ],
-            "comment": "OpenGL texture sampling creates a bunch of black dots for some reason"
+            "comments": {
+                "OpenGL": "Texture sampling creates a bunch of black dots for some reason"
+            }
         },
         {
             "title": "GLTF Extension KHR_materials_volume with attenuation",
             "playgroundId": "#YG3BBF#18",
             "referenceImage": "gltfExtensionKhrMaterialsVolumeAttenuation.png",
-            "excludedGraphicsApis": [ "OpenGL" ],
+            "excludedGraphicsApis": [ "OpenGL", "Metal" ],
             "errorRatio": 1.2,
             "renderCount": 10,
-            "comment": "xvfb : invalid enum with glRenderbufferStorage"
+            "comments": {
+                "OpenGL": "xvfb : invalid enum with glRenderbufferStorage",
+                "Metal": "No object rendered"
+            }
         },
         {
             "title": "GLTF ClearCoat",
@@ -137,9 +151,13 @@
             "title": "Glow layer and LODs",
             "playgroundId": "#UNS6ZV#2",
             "renderCount": 50,
-            "excludedGraphicsApis": [ "OpenGL", "D3D12" ],
+            "excludedGraphicsApis": [ "OpenGL", "D3D12", "Metal" ],
             "referenceImage": "glowlayerandlods.png",
-            "comment": "xvfb : invalid enum with glRenderbufferStorage. D3D12/CI: mapping a texture fails with error HRESULT 0x887A0005"
+            "comments": {
+                "OpenGL": "xvfb : invalid enum with glRenderbufferStorage",
+                "D3D12": "Mapping a texture fails with error HRESULT 0x887A0005",
+                "Metal": "Result doesn't match reference"
+            }
         },
         {
             "title": "Nested BBG",
@@ -152,7 +170,9 @@
             "playgroundId": "#FU0ES5#47",
             "referenceImage": "dynamicTextureClip.png",
             "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "D3D12/CI: Incorrect rendering of clipped texture"
+            "comments": {
+                "D3D12": "Incorrect rendering of clipped texture"
+            }
         },
         {
             "title": "GUI3D SpherePanel",
@@ -184,7 +204,9 @@
             "referenceImage": "glTFAlphaBlend.png",
             "renderCount": 1,
             "excludedGraphicsApis": [ "OpenGL" ],
-            "comment": "OpenGL mostly looks right but there are enough pixels to trigger the threshold, need to investigate"
+            "comments": {
+                "OpenGL": "Mostly looks right but there are enough pixels to trigger the threshold, need to investigate"
+            }
         },
         {
             "title": "GLTF Node Attribute (1)",
@@ -196,17 +218,23 @@
             "title": "Soft Shadows",
             "playgroundId": "#0YYQ3N#0",
             "errorRatio": 50,
-            "excludedGraphicsApis": [ "OpenGL" ],
+            "excludedGraphicsApis": [ "OpenGL", "Metal" ],
             "referenceImage": "softShadows.png",
-            "comment": "OpenGL: invalid light and wrong specular with SSAOcat.babylon"
+            "comments": {
+                "OpenGL": "Invalid light and wrong specular with SSAOcat.babylon",
+                "Metal": "Nothing rendered"
+            }
         },
         {
             "title": "Soft Shadows (Right Handed)",
             "playgroundId": "#0YYQ3N#2",
             "errorRatio": 50,
-            "excludedGraphicsApis": [ "OpenGL" ],
+            "excludedGraphicsApis": [ "OpenGL", "Metal" ],
             "referenceImage": "softShadowsRightHanded.png",
-            "comment": "OpenGL: invalid light and wrong specular with SSAOcat.babylon"
+            "comments": {
+                "OpenGL": "Invalid light and wrong specular with SSAOcat.babylon",
+                "Metal": "Nothing rendered"
+            }
         },
         {
             "title": "RenderingGroupId",
@@ -219,14 +247,19 @@
             "renderCount": 2,
             "excludedGraphicsApis": [ "OpenGL" ],
             "referenceImage": "LightProjectionTexture.png",
-            "comment": "xvfb : no rendering"
+            "comments": {
+                "OpenGL": "xvfb : no rendering"
+            }
         },
         {
             "title": "Point light shadows",
             "playgroundId": "#U2F7P9#4",
-            "excludedGraphicsApis": [ "OpenGL" ],
+            "excludedGraphicsApis": [ "OpenGL", "Metal" ],
             "referenceImage": "point-light-shadows.png",
-            "comment": "xvfb : invalid enum with glRenderbufferStorage"
+            "comments": {
+                "OpenGL": "xvfb : invalid enum with glRenderbufferStorage",
+                "Metal": "Rendered result doesn't match reference"
+            }
         },
         {
             "title": "Texture cache",
@@ -313,9 +346,12 @@
             "title": "Multi cameras and output render target",
             "renderCount": 2,
             "playgroundId": "#BCYE7J#31",
-            "excludedGraphicsApis": [ "OpenGL" ],
+            "excludedGraphicsApis": [ "OpenGL", "Metal" ],
             "referenceImage": "multiCamerasOutputRenderTarget.png",
-            "comment": "Incorrect rendering with OpenGL"
+            "comments": {
+                "OpenGL": "Incorrect rendering",
+                "Metal": "Result does not match reference"
+            }
         },
         {
             "title": "Multi camera rendering with scissors",
@@ -328,7 +364,10 @@
             "playgroundId": "#W7E7CF#34",
             "referenceImage": "scissor-test.png",
             "excludedGraphicsApis": [ "D3D12", "OpenGL" ],
-            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx. Incorrect rendering with OpenGL."
+            "comments": {
+                "D3D12": "reenable when automatic mip-maps issue is fixed in bgfx",
+                "OpenGL": "Incorrect rendering"
+            }
         },
         {
             "title": "Scissor test with 0.9 hardware scaling",
@@ -337,7 +376,10 @@
             "referenceImage": "scissor-test-2.png",
             "excludedGraphicsApis": [ "D3D12", "OpenGL" ],
             "errorRatio": 50,
-            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx. Incorrect rendering with OpenGL"
+            "comments": {
+                "D3D12": "reenable when automatic mip-maps issue is fixed in bgfx",
+                "OpenGL": "Incorrect rendering"
+            }
         },
         {
             "title": "Scissor test with 1.5 hardware scaling",
@@ -345,7 +387,10 @@
             "replace": "//options//, hardwareScalingLevel = 1.5;",
             "referenceImage": "scissor-test-3.png",
             "excludedGraphicsApis": [ "D3D12", "OpenGL" ],
-            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx. Incorrect rendering with OpenGL"
+            "comments": {
+                "D3D12": "reenable when automatic mip-maps issue is fixed in bgfx",
+                "OpenGL": "Incorrect rendering"
+            }
         },
         {
             "title": "Scissor test with negative x and y",
@@ -546,7 +591,9 @@
             "playgroundId": "#XN37SR#5",
             "excludedGraphicsApis": [ "OpenGL" ],
             "referenceImage": "gltfAlien.png",
-            "comment": " int/float casting see https://github.com/BabylonJS/BabylonNative/pull/1544"
+            "comments": {
+                "OpenGL": "int/float casting see https://github.com/BabylonJS/BabylonNative/pull/1544"
+            }
         },
         {
             "title": "Interleaved buffers test",
