--- a/Plugins/TestUtils/CMakeLists.txt
+++ b/Plugins/TestUtils/CMakeLists.txt
@@ -25,5 +25,10 @@ target_link_libraries(TestUtils
 
 target_compile_definitions(TestUtils PRIVATE GRAPHICS_API=${GRAPHICS_API})
 
+if(APPLE)
+    enable_objc_arc(TestUtils)
+    set_property(TARGET TestUtils PROPERTY UNITY_BUILD false)
+endif()
+
 set_property(TARGET TestUtils PROPERTY FOLDER Plugins)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
