Consolidate Rust crates and split lib.rs into modules
Merge the separate upstream-shim and CanvasWgpu Rust crates into the
single GraphicsWgpu workspace crate, eliminating duplicate dependency
trees and simplifying the Cargo workspace to one member.

Standards/practices adopted:
- Single-workspace Cargo idiom: one crate, feature-gated backends
- Rust module extraction: compute.rs pulled out of inline module block
  into upstream_wgpu_native/ subdirectory (standard Rust path resolution)
- catch_unwind at every FFI boundary to prevent Rust panics from
  unwinding into C++ (undefined behavior per Rust/C++ interop rules)
- Poisoned-lock handling on all Mutex/RwLock guards (std::sync contract)
- WgpuInterop.h extracted as a shared C++ header for Rust FFI types

Remaining gaps:
- lib.rs is still ~1800 lines; further extraction of render, surface,
  and adapter modules would improve navigability
- CanvasWgpu Rust side still uses raw pointer casts for NVG context
  handle — a typed opaque handle would be safer
- No Rust-side integration tests yet; testing is end-to-end via
  Playground smoke test only

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [workspace]
 members = [
     "Core/GraphicsWgpu/Rust",
-    "Core/GraphicsWgpu/Rust/upstream-shim",
-    "Polyfills/CanvasWgpu/Rust",
 ]
 resolver = "2"
 
 [workspace.dependencies]
-femtovg = { version = "=0.20.1", default-features = false, features = ["wgpu", "textlayout"] }
+bytemuck = { version = "=1.23.2", features = ["derive"] }
+femtovg = { version = "=0.19.3", default-features = false, features = ["wgpu", "textlayout"] }
 image = { version = "=0.25.9", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
 imgref = "=1.12.0"
 pollster = "=0.4.0"
